# classdemo

./: auto.py  fastgen.py  graph1.py  graph2.py  graph3.py  graph4.py  graph5.py  graph6.py  graph7.py  graph8.py  graph9.py  mcpdemo.py  mcplang.py  test_client.py  todo_server.py  twit_fast.py  twitter_gen.py
a2ademo/simpledemo/: __main__.py  agent.py  agent_executor.py
crew_demo/: README.md  pyproject.toml
crew_demo/src/crew_demo/: crew.py  main.py
